<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ForgotID"
    android:background="#fff"
    tools:showIn="@layout/activity_forgot_id">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="कृपया अपना पंजीकृत मोबाइल नंबर दर्ज करें"
            android:textSize="22sp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_id_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="110dp">

            <EditText
                android:id="@+id/forgot_id_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_mobile_number"
                android:inputType="number"
                android:textSize="20sp"
                android:maxLength="10" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/recover_id_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot_id_holder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/roundedcorner"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:text="@string/fetch_membership_id"
            android:textColor="#fff"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:text="@string/please_note_your_membership_id_will_be_sent_as_sms_on_your_registered_mobile_number"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>